# Kilate

./: CMakeLists.txt  Gemfile  README.md  Rakefile
.scripts/: replace_text.rb
include/kilate/: bool.h  environment.h  lexer.h  node.h  parser.h  string.h
src/: ast.rb  codegen.rb  consts.rb  environment.c  hashmap.c  interpreter.c  kilatec.rb  lexer.c  lexer.rb  main.c  native.c  node.c  parser.c  parser.rb  string.c  token.rb
test/: main.klt
tests/: main.klt
util/: Kilate.mtsx
